2008-09-01  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gtk/gtkselection.c:
	Update documentation for gtk_selection_data_get_data to
	match the changes introduced in -r21232 (the length
	parameter was removed).

2008-08-30  Matthew Barnes  <mbarnes@redhat.com>

	Bug 549943 – gtk_tool_shell_get_relief_style() always returns
	GTK_RELIEF_NONE

	* gtk/gtktoolshell.c (gtk_tool_shell_get_relief_style): Return
	the correct relief style.

2008-08-29  Björn Lindqvist  <bjourne@gmail.com>

	Bug 437791 – Animation is played at the wrong speed

	* gdk-pixbuf/io-gif.c (gif_get_lzw): Better 100 ms timeout for
	broken GIFs with 0 frame timeout.

2008-08-29  Christian Dywan  <christian@imendio.com>

	Bug 549810 – Memory leaks in printing code

	* gtk/gtkprintjob.c (gtk_print_job_set_property):
	* modules/printbackends/file/gtkprintbackendfile.c
	(output_file_from_settings):
	* modules/printbackends/test/gtkprintbackendtest.c
	(output_test_from_settings): free some temporary strings.
	Patch by Yevgen Muntyan.

2008-08-29  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwidget.h: move the gtk_widget_get_parent() and
	gtk_widget_get_parent_window() prototypes together with their
	respective setters.

	* gtk/gtkwidget.c: move gtk_widget_get_parent_window() together
	with its setter.

2008-08-29  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkscrolledwindow.c: events return gboolean not gint,
	reindent prototypes.

2008-08-29  Michael Natterer  <mitch@imendio.com>

	* configure.in: remove -DPANGO_DISABLE_SINGLE_INCLUDES from
	CPPFLAGS, I committed that accidentially.

2008-08-29  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkpaned.c: minor indentation / coding style fixes.

2008-08-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 549262 – GtkScrolledWindow should not accept focus unless
	GTK_CAN_FOCUS is set

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_focus): only grab the
	focus, if GTK_WIDGET_CAN_FOCUS() returns TRUE. Patch by Sven 
	Herzberg
