@@ -574,7 +574,6 @@ GdkWindow           * gtk_widget_get_parent_window      (GtkWidget    *widget);
 void                  gtk_widget_set_child_visible      (GtkWidget    *widget,
 							 gboolean      is_visible);
 gboolean              gtk_widget_get_child_visible      (GtkWidget    *widget);
-GtkAllocation	      gtk_widget_get_allocation         (GtkWidget    *widget);
 GdkWindow*            gtk_widget_get_window             (GtkWidget    *widget);
 
 gboolean   gtk_widget_child_focus         (GtkWidget           *widget,
