@@ -1,3 +1,12 @@
+2008-09-02  Michael Natterer  <mitch@imendio.com>
+
+	* gtk/gtkwidget.c (gtk_widget_get_allocation): removed this
+	function because there is massive disagreement about how to
+	implement it. Needs some general discussion in the next
+	development cycle about how our C api should evolve.
+
+	* gtk/gtk.symbols: changed accordingly.
+
 2008-09-01  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* gtk/gtkselection.c:
